tests/bad/invalid_yield.oc
/// fail: Cannot yield here

def main() {
	yield 5
}